# Tool1

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: intro.cpp  intro.h  nodal.cpp  nodal.h
src/edit/: EditUtils.cpp  EditUtils.h  IconsFontAwesome5.h  TextEdit.cpp  TextEdit.h  edit.cpp  edit.h
src/sys/: events.h  glext.h  msys.cpp  msys.h  msys_array.h  msys_assert.h  msys_debug.h  msys_font.h  msys_glext.cpp  msys_glext.h  msys_glutils.cpp  msys_glutils.h  msys_libc.h  msys_random.cpp  msys_random.h  msys_sound.h  msys_thread.h  msys_timer.h  msys_types.h  msys_vector.cpp  msys_vector.h
src/sys/_linux/: main_deb.cpp  main_rel.cpp  msys_fontOS.cpp  msys_mmallocOS.cpp  msys_soundOS.cpp  msys_threadOS.cpp
src/sys/_macos/: main.mm  msys_fontOS.cpp  msys_mmallocOS.cpp  msys_soundOS.cpp
src/sys/_windows/: main_deb.cpp  main_rel.cpp  msys_debugOS.cpp  msys_fontOS.cpp  msys_mmallocOS.cpp  msys_soundOS.cpp  msys_threadOS.cpp  msys_timerOS.cpp
src/sys/_windows/x64/: msys_libcOS_deb.cpp  msys_libcOS_rel.cpp  msys_libcOS_rel_asm.asm
src/sys/_windows/x86/: msys_libcOS.cpp
src/tools/: ImGuizmo.cpp  ImGuizmo.h  LanguageDefinitions.cpp  TextEditor.cpp  tools.cpp  tools.h
src/tools/_macos/: imgui_impl_osx.mm
